--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practica 1 - Github</title>
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-    
+    <header>
+        AQUI VA EL ENCABEZADO
+        <span>TEXTO</span>
+        <span>TEXTO</span>
+    </header>
+    <main>
+        Cuerpo de la pagina
+    </main>
+    <footer>
+        Aqui va el pie de pagina
+    </footer>
 </body>
 </html>
